--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
-		"dev": "nodemon index.js",
-		"build": "webpack --mode development"
+		"dev": "nodemon index.js"
 	},
 	"author": "",
 	"license": "ISC",
